# dependabot

./: pyproject.toml
.github/: dependabot.yaml
