[tool.poetry]
name = "test-repo"
version = "1.0.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pandas = "^2.0"

[tool.poetry.group.dev.dependencies]
redshift_connector = "^2.1"

[tool.poetry.group.test.dependencies]
moto = "^5.0"
mock = "^5.1"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
